--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,18 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.3.7.Final</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+
+    <!-- Runtime, com.sun.xml.bind module -->
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+    </dependency>
     <!--Log4j2 API -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
