--- a/db-ospedale/hsqldb-db.properties
+++ b/db-ospedale/hsqldb-db.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.5.0
-#Wed Mar 18 17:45:59 CET 2020
-tx_timestamp=0
+#HSQL Database Engine 2.4.0
+#Wed Mar 18 10:13:37 UTC 2020
+version=2.4.0
 modified=yes
-version=2.5.0
+tx_timestamp=0
